# Direct-Mesh-Booleans

./: CMakeLists.txt  LICENSE  README.md
cmake/: DirectMeshBooleansConfig.cmake.in
examples/: CMakeLists.txt
examples/include/: SimpleMesh.h
examples/src/: main.cpp
include/: AABBTree.h  AABBTree.hxx  Booleans.h  BoundingBox.h  FastWindingNumber.h  HelperFunctions.h  HelperStrucutres.h  MatrixMesh.h  MatrixMesh.hxx  MeshArrangement.h  MeshArrangement.hxx  MeshOperand.h  MeshOperand.hxx  Utils.h
patches/: FaRMA_patch.patch
test/: CMakeLists.txt
test/include/: SimpleMesh.h
tests/: CMakeLists.txt
tests/src/: FWNTest.cpp  main.cpp
